--- a/views/services.ejs
+++ b/views/services.ejs
@@ -7,7 +7,7 @@
         <div class="mt-5">
           <i class="fas fa-4x fa-gem text-primary mb-4"></i>
           <h3 class="h4 mb-2">Antropométrica</h3>
-          <p class="text-muted mb-0">
+          <p class="text-muted mb-0 text-justify">
             Massa corporal (peso), a estatura, envergadura, altura troncocefálica, 
             comprimento de membros inferiores e superiores e os perímetros corporais.
           </p>
@@ -17,28 +17,28 @@
         <div class="mt-5">
           <i class="fas fa-4x fa-laptop-code text-primary mb-4"></i>
           <h3 class="h4 mb-2">Anamnese </h3>
-          <p class="text-muted mb-0">
-            (entrevista sobre os dados pessoais, histórico de doenças, cirurgias e lesões, 
-            hábitos de sono e alimentação, medicações em uso, cirurgias já feitas, passado de atividades físicas e objetivos do aluno).
+          <p class="text-muted mb-0 text-justify">
+            Entrevista sobre os dados pessoais, histórico de doenças, cirurgias e lesões, 
+            hábitos de sono e alimentação, medicações em uso, cirurgias já feitas, passado de atividades físicas e objetivos do aluno.
           </p>
         </div>
       </div>
       <div class="col-lg-3 col-md-6 text-center">
         <div class="mt-5">
           <i class="fas fa-4x fa-globe text-primary mb-4"></i>
-          <h3 class="h4 mb-2">composição corporal</h3>
-          <p class="text-muted mb-0">
-            vários métodos permitem que o profissional saiba acessar a quantidade de gordura e de massa magra do 
-            avaliado (dobras cutâneas, bioimpedância elétrica, fita métrica)
+          <h3 class="h4 mb-2">Composição corporal</h3>
+          <p class="text-muted mb-0 text-justify">
+            Vários métodos permitem que o profissional saiba acessar a quantidade de gordura e de massa magra do 
+            avaliado (dobras cutâneas, bioimpedância elétrica, fita métrica).
           </p>
         </div>
       </div>
       <div class="col-lg-3 col-md-6 text-center">
         <div class="mt-5">
           <i class="fas fa-4x fa-heart text-primary mb-4"></i>
-          <h3 class="h4 mb-2">cardiorrespiratória</h3>
-          <p class="text-muted mb-0">
-            aplicação de testes físicos que envolvam caminhada, corrida, saltos, movimentos cíclicos, 
+          <h3 class="h4 mb-2">Cardiorrespiratória</h3>
+          <p class="text-muted mb-0 text-justify">
+            Aplicação de testes físicos que envolvam caminhada, corrida, saltos, movimentos cíclicos, 
             por um determinado tempo, e que informem qual o estado de aptidão cardiorrespiratória do avaliado.
           </p>
         </div>
@@ -47,8 +47,8 @@
         <div class="mt-5">
           <i class="fas fa-4x fa-heart text-primary mb-4"></i>
           <h3 class="h4 mb-2">Postural</h3>
-          <p class="text-muted mb-0">
-            a avaliação postural é feita pelo avaliador observando o avaliado nos planos frontal, sagital e transversal; 
+          <p class="text-muted mb-0 text-justify">
+            A avaliação postural é feita pelo avaliador observando o avaliado nos planos frontal, sagital e transversal; 
             aqui o profissional irá procurar por desvios posturais relevantes que podem ser corrigidos ou amenizados através do treinamento físico.
           </p>
         </div>
@@ -57,8 +57,8 @@
         <div class="mt-5">
           <i class="fas fa-4x fa-heart text-primary mb-4"></i>
           <h3 class="h4 mb-2">Neuromuscular</h3>
-          <p class="text-muted mb-0">
-            envolve a análise da força muscular, além da potência muscular, coordenação motora, agilidade, flexibilidade, equilíbrio corporal, dentre outros.
+          <p class="text-muted mb-0 text-justify">
+            Envolve a análise da força muscular, além da potência muscular, coordenação motora, agilidade, flexibilidade, equilíbrio corporal, dentre outros.
           </p>
         </div>
       </div>
@@ -66,8 +66,8 @@
         <div class="mt-5">
           <i class="fas fa-4x fa-heart text-primary mb-4"></i>
           <h3 class="h4 mb-2">Níveis de dor</h3>
-          <p class="text-muted mb-0">
-            existem várias formas de se quantificar o nível de dor que o seu aluno sente antes e durante o treinamento. A Escala Visual Analógica de Dor 
+          <p class="text-muted mb-0 text-justify">
+            Existem várias formas de se quantificar o nível de dor que o seu aluno sente antes e durante o treinamento. A Escala Visual Analógica de Dor 
             é uma forma de se quantificar a dor, muito utilizada pelos profissionais das saúdes, validada cientificamente e de fácil entendimento pelos avaliados.
           </p>
         </div>
